# try-streamlit-cloud-deploy

./: .gitignore  pyproject.toml  requirements.txt
app/: app.py  tables.py
app/components/: database.py  footer.py  token.py
